*** WooCommerce Extension Changelog ***

# 1.4.1
    * Changed the value of sourceApplication and webMasterId values.

# 1.4.0
    * Add support for WC Subscriptions plugin.
    * Added a script to remove the WCS Pay button on Thank-you page.
    * On Thank-you page hooks check if the order belongs to Nuvei.
    * Added PayPal as option for Rebillings with WCS only.
    * Added _nuveiPrevTransactionStatus custom field to the Order. It will be used in case of declined Void to return Order to original status.
    * Void button will be available only for orders with AuthCode.
    * For WCS Renewal order try to generate unique clientUniqueId parameter.

# 1.3.1
    * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
    * When create Nuvei Payment plan "Select a Plan..." option was renamed to "Without Plan".
    * When edit Nuvei Payment plans "Without Plan" option is available.
    * Force transaction type to Auth when Order total amount is 0.

# 1.3.0
    * Allow checkout with any combination of products.
    * Enable using Nuvei Payment Plans for product with attribute only, without variations.
    * Do not pass Product data by open/updateOrder request.
    * Do not pass Subscription data by open/updateOrder request, but keep it in WC session. Just before redirect to the success page save it as Order meta data.
    * Logs directory was moved to wp-content/uploads/nuvei-logs.
    * Removed old log directory from the plugin.
    * Removed the option to change the DMN URL.
    * Removed the option to read the Today log file. Any file manager plugin can be use instead.

# 1.2.4
    * Fix for the case when updateOrder does not upgrade empty userTokenId.
    * Do not validate and process the Tokenization DMNs.
    * When click on Pay button check if the products are still in stock.

# 1.2.3
    * Fix the links to Nuvei documentation into the plugin settings.
    * Do not process Pending DMNs.